[package]
name = "stackable-webhook"
version = "0.3.1"
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
stackable-certs = { path = "../stackable-certs", features = ["rustls"] }
stackable-telemetry = { path = "../stackable-telemetry" }
stackable-operator = { path = "../stackable-operator" }

axum.workspace = true
futures-util.workspace = true
hyper-util.workspace = true
hyper.workspace = true
k8s-openapi.workspace = true
kube.workspace = true
opentelemetry.workspace = true
serde_json.workspace = true
snafu.workspace = true
tokio-rustls.workspace = true
tokio.workspace = true
tower-http.workspace = true
tower.workspace = true
tracing.workspace = true
tracing-opentelemetry.workspace = true
