[package]
name = "xtask"
edition = "2024"
publish = false

[dependencies]
stackable-operator = { path = "../stackable-operator", features = ["crds"] }

clap.workspace = true
indoc.workspace = true
paste.workspace = true
serde.workspace = true
serde_json.workspace = true
snafu.workspace = true
strum.workspace = true

[lints]
workspace = true
